[gd_scene load_steps=11 format=2]

[ext_resource path="res://games/demo_game/demo_game.tres" type="Resource" id=1]
[ext_resource path="res://tools/ui_tools/label.gd" type="Script" id=2]
[ext_resource path="res://apps/room_tester/room_tester.gd" type="Script" id=3]
[ext_resource path="res://clients/default_client/game_display.tscn" type="PackedScene" id=4]
[ext_resource path="res://apps/room_tester/pointfree.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://apps/room_tester/pixel_intv.otf" type="DynamicFontData" id=6]
[ext_resource path="res://apps/room_tester/object_list.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 5 )

[node name="room_tester" type="Node"]
script = ExtResource( 3 )
game_to_load = ExtResource( 1 )
ui_path = NodePath("ui_layer/ui")
display_path = NodePath("display")
room_list_path = NodePath("ui_layer/ui/test_rooms/lists/room_list")
actor_list_path = NodePath("ui_layer/ui/test_rooms/lists/actor_list")
script_list_path = NodePath("ui_layer/ui/test_rooms/lists/script_list")
raw_script_edit_path = NodePath("ui_layer/ui/test_raw/raw_script")

[node name="ui_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="ui" type="Control" parent="ui_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ui_layer/ui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.458824, 0.47451, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_game_button" type="Button" parent="ui_layer/ui"]
margin_left = 112.756
margin_top = 81.4145
margin_right = 515.756
margin_bottom = 216.416
text = "ROOM_TESTER_PLAY_GAME"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="ui_layer/ui"]
margin_left = 109.283
margin_top = 892.185
margin_right = 512.283
margin_bottom = 1027.19
text = "ROOM_TESTER_QUIT"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_rooms" type="Panel" parent="ui_layer/ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 650.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ui_layer/ui/test_rooms"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.309333, 0.32, 0.288, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lists" type="HBoxContainer" parent="ui_layer/ui/test_rooms"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="room_list" parent="ui_layer/ui/test_rooms/lists" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 404.0
margin_bottom = 980.0

[node name="header" parent="ui_layer/ui/test_rooms/lists/room_list/elements" index="0"]
margin_right = 364.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/room_list/elements/header" index="0"]
text = "ROOM_TESTER_ROOMS"

[node name="actor_list" parent="ui_layer/ui/test_rooms/lists" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_right = 812.0
margin_bottom = 980.0

[node name="header" parent="ui_layer/ui/test_rooms/lists/actor_list/elements" index="0"]
margin_right = 364.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/actor_list/elements/header" index="0"]
text = "ROOM_TESTER_ACTORS"

[node name="script_list" parent="ui_layer/ui/test_rooms/lists" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 816.0
margin_right = 1220.0
margin_bottom = 980.0

[node name="ColorRect" parent="ui_layer/ui/test_rooms/lists/script_list" index="0"]
color = Color( 0, 0, 0, 0.168627 )

[node name="header" parent="ui_layer/ui/test_rooms/lists/script_list/elements" index="0"]
margin_right = 364.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/script_list/elements/header" index="0"]
text = "ROOM_TESTER_SCRIPTS"

[node name="test_room_button" type="Button" parent="ui_layer/ui/test_rooms"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -198.508
margin_top = -146.795
margin_right = 200.492
margin_bottom = -31.7958
text = "ROOM_TESTER_TEST"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_raw" type="Panel" parent="ui_layer/ui"]
margin_left = 119.0
margin_top = 328.0
margin_right = 515.0
margin_bottom = 806.0

[node name="raw_script" type="TextEdit" parent="ui_layer/ui/test_raw"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -118.0
custom_fonts/font = SubResource( 3 )
text = "# grog script

:start

.say \"Hello, world!\"

.end

#.load_room room_name
#.load_actor actor_name
#.load_actor actor_name at=pos

#.wait 2
#actor_name.say \"Dialog\"
#actor_name.walk to=pos
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_raw_button" type="Button" parent="ui_layer/ui/test_raw"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -84.9279
margin_right = 120.0
margin_bottom = -17.9279
text = "ROOM_TESTER_TEST_RAW"
script = ExtResource( 2 )

[node name="display" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="ui_layer/ui/play_game_button" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="ui_layer/ui/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ui_layer/ui/test_rooms/test_room_button" to="." method="_on_test_room_button_pressed"]
[connection signal="pressed" from="ui_layer/ui/test_raw/test_raw_button" to="." method="_on_test_raw_button_pressed"]

[editable path="ui_layer/ui/test_rooms/lists/room_list"]

[editable path="ui_layer/ui/test_rooms/lists/actor_list"]

[editable path="ui_layer/ui/test_rooms/lists/script_list"]
